--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class="svg">
                     <defs>
                         <pattern id="foto" height="1" width="1" >
-                            <image height="100%" class="image" xlink:href="src/img/eu1.png" x="" y="-16">
+                            <image height="100%" class="image" xlink:href="/src/img/eu1.png" x="" y="-16">
                             </image>
                         </pattern>
                     </defs>
@@ -74,4 +74,7 @@
         </div>
     </div>
 </body>
+<footer>
+    <img src="src/img/Danz-branco.png" alt="logomarca">
+</footer>
 </html>
