--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no" >
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0" >
     <link rel="stylesheet" href="src/css/main.css">
     <title>Danz</title>
     <script src="https://kit.fontawesome.com/7532b06699.js" crossorigin="anonymous"></script>
